unpackaged/main/default/objects/SBQQ__FieldSetMetadata__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the user does not have a configuration.</description>
    <inlineHelpText>If the user does not have a configuration.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>